<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#AA111111"
    android:padding="10dp"
    android:weightSum="100">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:text="@string/Te7"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="60dp"
            android:text="@string/Button11"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="60dp"
            android:text="@string/Button13"
            android:id="@+id/button5"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="60dp"
            android:text="@string/Button15"
            android:id="@+id/button7"
            android:layout_gravity="right"
            android:textColor="#ffffff"/>

    </LinearLayout>



</LinearLayout>