<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="#AA111111"
    android:padding="10dp"
    android:weightSum="100">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:text="@string/Te1"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16">

    </EditText>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:text="@string/Te2"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/input_text2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16">
    </EditText>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:text="@string/Te3"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/input_text3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="120"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="60"
            android:layout_height="60dp"
            android:text="@string/Button11"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"/>


        <Button
            android:layout_width="0dp"
            android:layout_weight="60"
            android:layout_height="60dp"
            android:text="@string/Button12"
            android:id="@+id/button7"
            android:layout_gravity="right"
            android:textColor="#ffffff"/>

    </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>