<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/buhlo">

    <Button
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Button4"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="#AA111111"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Button5"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:background="#AA111111"
        android:layout_margin="2dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Button6"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="#AA111111"
        android:layout_margin="2dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Button7"
        android:id="@+id/button4"
        android:layout_margin="2dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:background="#AA111111"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>