<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/buhlo">


    <Button
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Button"
        android:id="@+id/button"
        android:layout_marginTop="85dp"
        android:background="#AA111111"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Button2"
        android:id="@+id/button2"
        android:background="#AA111111"
        android:layout_margin="2dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Button3"
        android:id="@+id/button3"
        android:background="#AA111111"
        android:textSize="20sp"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
