<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buhlo"
    >

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85"
        android:layout_gravity="center_horizontal|center_vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <Button
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="match_parent"
            android:text="@string/Button8"
            android:id="@+id/button"
            android:textSize="17sp"
            android:background="#AA111111"
            android:singleLine="true"
            android:layout_margin="2dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="match_parent"
            android:text="@string/Button9"
            android:id="@+id/button2"
            android:textSize="17sp"
            android:background="#AA111111"
            android:singleLine="true"
            android:layout_margin="2dp"
             />
        <Button
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="match_parent"
            android:text="@string/Button10"
            android:id="@+id/button3"
            android:textSize="17sp"
            android:singleLine="true"
            android:background="#AA111111"
            android:layout_margin="2dp"
            />

    </LinearLayout>
</LinearLayout>