<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buhlo">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        card_view:cardCornerRadius="32dp"
        card_view:cardBackgroundColor="#AA111111">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:id="@+id/image"
        android:layout_below="@+id/tv_summa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="center"
        />

        <TextView
            android:id="@+id/textView"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center_horizontal|center_vertical"
            android:text="Summa"
            android:textColor="#ffffff"
            android:layout_gravity="right"
            />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="32dp"
        card_view:cardBackgroundColor="#AA111111">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Te4"
        android:id="@+id/textView3"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:id="@+id/textView2"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Te6"
        android:id="@+id/textView5"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/Add"
        android:background="#AA111111"
        android:textSize="20sp"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>